feature: added dp, dfs and bfs problems (#19)